# mojo-torch

./: .gitignore  Makefile  benchmark_matmul.mojo  main.mojo  main.py  pyproject.toml
mojo_torch/: __init__.mojo
mojo_torch/nn/: linear.mojo
mojo_torch/ops/: activation.mojo  matmul.mojo
mojo_torch/tensor/: __init__.mojo  tensor.mojo
nn/: __init__.mojo  linear.mojo
ops/: __init__.mojo  activation.mojo  matmul.mojo
tensor/: __init__.mojo  tensor.mojo
test/: __init__.mojo  matmul_test.mojo  run.py
test/utils/: test_results.mojo
