[project]
name = "mojo-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "max>=25.6.1",
    "mojo>=0.25.7.0.dev2025102505",
    "numpy>=2.3.4",
    "ruff>=0.14.1",
    "torch>=2.9.0",
]

[[tool.uv.index]]
name = "mojo"
url = "https://dl.modular.com/public/nightly/python/simple/"
